syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/loadable.proto";
import "stremio/core/types/api.proto";

message AuthLink {
  optional LoadableCode code = 1;
  optional LoadableAuthKey data = 2;
}

message LoadableCode {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    stremio.core.types.LinkCodeResponse ready = 3;
  }
}

message LoadableAuthKey {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    stremio.core.types.LinkAuthKey ready = 3;
  }
}