syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.addon";

message Descriptor {
  required Manifest manifest = 1;
  required string transport_url = 2;
  required DescriptorFlags flags = 3;
  required bool installed = 4;
  required bool installable = 5;
  required bool upgradeable = 6;
  required bool uninstallable = 7;
}

message DescriptorPreview {
  required ManifestPreview manifest = 1;
  required string transport_url = 2;
  required bool installed = 3;
}

message DescriptorFlags {
  required bool official = 1;
  required bool protected = 2;
}

message Manifest {
  required string id = 1;
  required string version = 2;
  required string name = 3;
  optional string description = 4;
  optional string logo = 5;
  optional string background = 6;
  repeated string types = 7;
  optional string contact_email = 8;
  repeated ManifestResource resources = 9;
  repeated string id_prefixes = 10;
  repeated ManifestCatalog catalogs = 11;
  repeated ManifestCatalog addon_catalogs = 12;
  required ManifestBehaviorHints behavior_hints = 13;
}

message ManifestPreview {
  required string id = 1;
  required string version = 2;
  required string name = 3;
  optional string description = 4;
  optional string logo = 5;
  optional string background = 6;
  repeated string types = 7;
  required ManifestBehaviorHints behavior_hints = 8;
}

message ManifestResource {
  required string name = 1;
  repeated string types = 2;
  repeated string id_prefixes = 3;
}

message ManifestCatalog {
  required string id = 1;
  required string type = 2;
  optional string name = 3;
  required ManifestExtra extra = 4;
}

message ManifestExtra {
  oneof extra {
    FullManifestExtra full = 1;
    ShortManifestExtra short = 2;
  }
}

message ShortManifestExtra {
  repeated string required = 1;
  repeated string supported = 2;
}

message FullManifestExtra {
  repeated ExtraProp props = 1;
}

message ExtraProp {
  required string name = 1;
  required bool is_required = 2;
  repeated string options = 3;
  required int32 options_limit = 4;
}

message ManifestBehaviorHints {
  required bool adult = 1;
  required bool p2p = 2;
  required bool configurable = 3;
  required bool configuration_required = 4;
}