syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.resource";

import "google/protobuf/timestamp.proto";
import "stremio/core/types/meta_item.proto";

message MetaItemPreview {
  required string id = 1;
  required string type = 2;
  required string name = 3;
  required PosterShape poster_shape = 4;
  optional string poster = 5;
  optional string background = 6;
  optional string logo = 7;
  optional string description = 8;
  optional string release_info = 9;
  optional string runtime = 10;
  optional google.protobuf.Timestamp released = 11;
  repeated LinkPreview links = 12;
  required MetaItemBehaviorHints behavior_hints = 15;
  required MetaItemDeepLinks deep_links = 16;
  required bool in_library = 17;
  required bool in_cinema = 18;
}

message LinkPreview {
  required string name = 1;
  required string category = 2;
}